--- a/src/app/shared/detalle-indicador/estado-evidencia/evidencia-file-contenedor/evidencia-file-contenedor.component.html
+++ b/src/app/shared/detalle-indicador/estado-evidencia/evidencia-file-contenedor/evidencia-file-contenedor.component.html
@@ -68,7 +68,7 @@
             <ng-container *ngIf="archivo.showContainer">
               <ng-container *ngFor="let log of logArchivoEvidencia; let i = index" >
                 <div class="container unique-class" *ngIf="log.IdArchivoEvidencia === archivo.IdArchivoEvidencia && log.PathUrl">
-                  <p>Usuario Registra: {{ log.UsuarioRegistra }}</p>
+                  <p>{{ log.UsuarioRegistra }}</p>
                   <a href="{{log.PathUrl}}"> {{archivo.Detalle}}</a>
                   <p>Fecha Registro: {{ log.FechaRegistro }}</p>
                 </div>
