--- a/src/app/components/panel/admin/permission-table/permission-table.component.html
+++ b/src/app/components/panel/admin/permission-table/permission-table.component.html
@@ -31,6 +31,11 @@
     
     <div class="container-asignados">
       <div *ngFor="let item of selectedItems">
+        <ng-container *ngIf="item.Codigo && padresData[item.Codigo]">
+          <div *ngFor="let padre of padresData[item.Codigo]" class="padre-container">
+            {{ padre.listP }}
+          </div>
+        </ng-container>
         {{item.Detalle}} 
         <button mat-button (click)="removeChildElement(item.Codigo ?? '')" class="btn-eliminar">Eliminar</button>
       </div>
@@ -46,3 +51,6 @@
     </button>
   </div>
 </form>
+<div>
+  <h1>Reistro usuarios</h1>
+</div>
