--- a/src/app/shared/detalle-indicador/estado-evidencia/evidencia-file-contenedor/evidencia-file-contenedor.component.html
+++ b/src/app/shared/detalle-indicador/estado-evidencia/evidencia-file-contenedor/evidencia-file-contenedor.component.html
@@ -68,8 +68,18 @@
             <ng-container *ngIf="archivo.showContainer">
               <ng-container *ngFor="let log of logArchivoEvidencia; let i = index" >
                 <div class="container unique-class" *ngIf="log.IdArchivoEvidencia === archivo.IdArchivoEvidencia && log.PathUrl">
+                  <div class="d-flex col-1">
+                    <div class="statusColor" *ngIf="log.Estado=='2' && archivo.PathUrl!==null" [ngStyle]="{'background-color': '#9FFFA4'}"></div>
+                    <div class="statusColor" *ngIf="log.Estado=='1' && archivo.PathUrl!==null" [ngStyle]="{'background-color': '#FFA785'}"></div>
+                    <div class="statusColor" *ngIf="log.Estado=='0' || archivo.PathUrl===null" [ngStyle]="{'background-color': '#FFDD91'}"></div>
+                  </div>
+                  <div>
+                    <div  *ngIf="log.Estado=='2' "><a>Archivo aprovado</a></div>
+                    <div  *ngIf="log.Estado=='1' "><a>Archivo erroneo</a></div>
+                    <div  *ngIf="log.Estado=='0' "><a>Archivo en espera</a></div>
+                  </div>
                   <p>{{ log.UsuarioRegistra }}</p>
-                  <a href="{{log.PathUrl}}"> {{archivo.Detalle}}</a>
+                  <a href="{{log.PathUrl}}"> {{log.Detalle}}</a>
                   <p>Fecha Registro: {{ log.FechaRegistro }}</p>
                 </div>
               </ng-container>
