--- a/src/app/shared/detalle-indicador/estado-evidencia/asignar-usuario/asignar-usuario.component.html
+++ b/src/app/shared/detalle-indicador/estado-evidencia/asignar-usuario/asignar-usuario.component.html
@@ -14,6 +14,7 @@
                 </div>
                 <p>
                     {{formatName(encargado.UsuarioRegistra)}}
+                    {{encargado.UsuarioRegistra}}
                 </p>
                 <div class="d-flex">
                     <span class="material-symbols-outlined" data-bs-target="#editEncargado" data-bs-toggle="modal" >edit</span>
