solucion errores y mejoras por eliminacion de tabla, add notificaciones

--- a/src/app/shared/detalle-indicador/estado-evidencia/asignar-usuario/asignar-usuario.component.html
+++ b/src/app/shared/detalle-indicador/estado-evidencia/asignar-usuario/asignar-usuario.component.html
@@ -67,7 +67,7 @@
                     <p>El nuevo usuario encargado de esta evidencia será <strong>{{straddconf}}</strong></p>
                     <textarea id="txtAreaAssignUsers" rows="5" placeholder="Que archivo debe subir" formControlName="detalle"></textarea>
                     <div class="d-flex justify-content-center align-items-center">
-                        <button class="btn btn-primary" (click)="agregarNuevaArchivo()" data-bs-dismiss="modal">Agregar</button>
+                        <!-- <button class="btn btn-primary" (click)="agregarNuevaArchivo()" data-bs-dismiss="modal">Agregar</button> -->
                         <button class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                     </div>
                 </form>
@@ -122,7 +122,7 @@
                 <div class="container">
                     <p>Se agregara un nuevo encargado <strong>{{straddconf}}</strong> para esta evidencia</p>
                     <div class="d-flex justify-content-center align-items-center">
-                        <button class="btn btn-primary" (click)="agregarNuevaArchivo()" data-bs-dismiss="modal">Agregar</button>
+                        <!-- <button class="btn btn-primary" (click)="agregarNuevaArchivo()" data-bs-dismiss="modal">Agregar</button> -->
                         <button class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                     </div>
                 </div>
