--- a/src/app/shared/detalle-indicador/estado-evidencia/evidencia-file-contenedor/evidencia-file-contenedor.component.html
+++ b/src/app/shared/detalle-indicador/estado-evidencia/evidencia-file-contenedor/evidencia-file-contenedor.component.html
@@ -35,7 +35,7 @@
                           <span class="material-symbols-outlined x">close</span>
                         </div>
                       </div>
-                    <ng-container *ngIf="rolviewradios == '1'">
+                    <ng-container *ngIf="rolviewradios == '1' && archivo.Estado != '2' && archivo.Estado != '1'">
                         <form [formGroup]="radiobuton" (ngSubmit)="sendValidated(i, archivo)">
                             <div class="d-flex">
                                 <div class="d-flex mb-2">
@@ -63,26 +63,31 @@
                 </div>
             </li>
             <div class="d-flex justify-content-end">
-              <i class="material-icons" (click)="toggleContainer(i)">arrow_drop_down</i>
-            </div>
+              <i class="material-icons" (click)="toggleContainer(i, archivo.UsuarioRegistra, archivo.IdEvidencia)">arrow_drop_down</i>
+            </div>  
             <ng-container *ngIf="archivo.showContainer">
-              <ng-container *ngFor="let log of logArchivoEvidencia; let i = index" >
-                <div class="container unique-class" *ngIf="log.IdArchivoEvidencia === archivo.IdArchivoEvidencia && log.PathUrl">
-                  <div class="d-flex col-1">
-                    <div class="statusColor" *ngIf="log.Estado=='2' && archivo.PathUrl!==null" [ngStyle]="{'background-color': '#9FFFA4'}"></div>
-                    <div class="statusColor" *ngIf="log.Estado=='1' && archivo.PathUrl!==null" [ngStyle]="{'background-color': '#FFA785'}"></div>
-                    <div class="statusColor" *ngIf="log.Estado=='0' || archivo.PathUrl===null" [ngStyle]="{'background-color': '#FFDD91'}"></div>
+              <div *ngFor="let item of ArchivosInactivos">
+                <div class="d-flex">
+                  <div class="col-1">
+                    <div class="statusColor" *ngIf="item.Estado=='2' && item.PathUrl!==null" [ngStyle]="{'background-color': '#9FFFA4'}"></div>
+                    <div class="statusColor" *ngIf="item.Estado=='1' && item.PathUrl!==null" [ngStyle]="{'background-color': '#FFA785'}"></div>
+                    <div class="statusColor" *ngIf="item.Estado=='0' || item.PathUrl===null" [ngStyle]="{'background-color': '#FFDD91'}"></div>
                   </div>
-                  <div>
-                    <div  *ngIf="log.Estado=='2' "><a>Archivo aprovado</a></div>
-                    <div  *ngIf="log.Estado=='1' "><a>Archivo erroneo</a></div>
-                    <div  *ngIf="log.Estado=='0' "><a>Archivo en espera</a></div>
+                  <div class="col-2">
+                    <div *ngIf="item.Estado=='2'"><a>Aprovado</a></div>
+                    <div *ngIf="item.Estado=='1'"><a>Erroneo</a></div>
                   </div>
-                  <p>{{ log.UsuarioRegistra }}</p>
-                  <a href="{{log.PathUrl}}"> {{log.Detalle}}</a>
-                  <p>Fecha Registro: {{ log.FechaRegistro }}</p>
+                  <div class="col-2">
+                    <p>{{ item.UsuarioRegistra }}</p>
+                  </div>
+                  <div class="col-4">
+                    <a href="{{item.PathUrl}}"> {{item.Detalle}}</a>
+                  </div>
+                  <div class="col-3">
+                    <p>Fecha Registro: {{ item.FechaRegistro }}</p>
+                  </div>
                 </div>
-              </ng-container>
+              </div>
             </ng-container>
         </ng-container>
     </ul>
